--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,8 @@ plan.txt
 smith_waterman.py
 H_pickle.pkl
 M_pickle.pkl
+
+small_data/
 data/reads_out_20Ma.txt
 data/reads_out_20Mb.txt
 data/reads_out_20Mb_2.txt
